added <meta charset="UTF-8" /> to each file

--- a/website/gallery/index.html
+++ b/website/gallery/index.html
@@ -5,6 +5,7 @@
         <title>
         Gallery
     </title>
+    <meta charset="UTF-8" />
     </head>
 
         <body style="background-color:#0062c4;" text="white">
