--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
         <title>
         Andres Arroyo Webpage
     </title>
+    <meta charset="UTF-8" />
     </head>
         <!-- Custom Background Color-->
         <body style="background-color:#002244;" text="white">
