--- a/website/about.html
+++ b/website/about.html
@@ -3,6 +3,7 @@
     <head><title>
         About Me
     </title>
+    <meta charset="UTF-8" />
     </head>
     
     <body style="background-color:#9b2121;">
