--- a/website/broncos.html
+++ b/website/broncos.html
@@ -4,6 +4,7 @@
     <title>
         Denver Broncos
     </title>
+    <meta charset="UTF-8" />
 </head>
 <body style="background-color:#de6036;">
     <nav>
