--- a/website/contact.html
+++ b/website/contact.html
@@ -3,6 +3,7 @@
     
     <head>
         <title>Contact Page</title>
+        <meta charset="UTF-8" />
         </head>
         
         <body style="background-color:#afa8bb;">
